delete previous practise

--- a/angular.json
+++ b/angular.json
@@ -120,6 +120,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "my-first-app"
+    }
+  },
+  "defaultProject": "my-first-app",
+  "cli": {
+    "analytics": false
+  }
 }
