--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~9.1.0",
     "angular2-text-mask": "^9.0.0",
     "bootstrap": "^3.4.1",
+    "moment": "^2.24.0",
     "ngx-mask": "^9.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
